// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardRailView renders correctly 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main main"
  >
    <div
      class="StyledProps--font StyledProps--main header"
    >
      <span
        class="bp3-icon bp3-icon-warning-sign StyledProps--main"
        icon="warning-sign"
        style="width: 14px;"
      >
        <svg
          data-icon="warning-sign"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            warning-sign
          </desc>
          <path
            d="M15.84 13.5l.01-.01-7-12-.01.01c-.17-.3-.48-.5-.85-.5s-.67.2-.85.5l-.01-.01-7 12 .01.01c-.09.15-.15.31-.15.5 0 .55.45 1 1 1h14c.55 0 1-.45 1-1 0-.19-.06-.35-.15-.5zm-6.85-.51h-2v-2h2v2zm0-3h-2v-5h2v5z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <p
        class="StyledProps--font StyledProps--main title StyledProps--font-size-medium"
      >
        Active Builds
      </p>
    </div>
    <div
      class="StyledProps--font StyledProps--main content"
    >
      <div
        class="StyledProps--font StyledProps--main activeBuildCard"
      >
        <span
          class="bp3-icon StyledProps--main buildIcon"
          data-icon="ci-active-build"
        >
          <svg
            fill="none"
            height="16"
            viewBox="0 0 24 20"
            width="16"
          >
            <path
              d="M18.931 0l-5.068 2.926v2.057l-1.778-1.026-5.067 2.926v2.156l-1.95-1.126L0 10.84v5.852l5.068 2.926 5.068-2.926v-2.156l1.95 1.126 5.068-2.927V10.68l1.777 1.026L24 8.78V2.926L18.931 0zm3.75 3.18l-3.749 2.165-3.75-2.165 3.75-2.165 3.75 2.165zm-8.818 2.818v2.277l-1.777 1.026-3.75-2.164 3.75-2.165 1.777 1.026zm2.412 3.158l-1.09-.63 1.09-.628v1.258zm-1.533-1.388V6.506l1.093.63-1.093.632zm-7.724 2.286v2.079l-1.95 1.125-3.75-2.165 3.75-2.165 1.95 1.126zm2.24 2.96l-1.004-.58 1.003-.58v1.16zm-1.361-1.389v-1.064l.921.532-.921.532zm-7.018.23l3.75 2.165v4.329l-3.75-2.165v-4.33zm8.378 4.329l-3.75 2.165v-4.33l1.868-1.078 1.882 1.087v2.156zm-1.36-6.637v-1.65l3.75 2.165v4.33l-1.51-.872v-2.68l-2.24-1.293zm8.378 2.68l-3.75 2.165v-4.33l1.781-1.028 1.969 1.137v2.056zm-1.533-6.736V3.94l3.75 2.165v4.33l-1.338-.773v-2.78L14.742 5.49zm4.629 4.945v-4.33l3.75-2.165v4.33l-3.75 2.165z"
              fill="#6B6D85"
            />
          </svg>
        </span>
        <div
          class="StyledProps--font StyledProps--main titleAndMessage"
        >
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main title StyledProps--font-weight-bold StyledProps--color StyledProps--color-black"
            style="--text-line-clamp: 1;"
          >
            Pipeline1
          </p>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-size-small StyledProps--color StyledProps--color-black"
            style="--text-line-clamp: 1;"
          >
            This is message
          </p>
        </div>
        <div
          class="StyledProps--font StyledProps--main"
        >
          <div
            class="statusLabel pendingApprovalLabel"
          >
            <span
              class="bp3-icon bp3-icon-time StyledProps--main statusLabelIcon"
              icon="time"
            >
              <svg
                data-icon="time"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  time
                </desc>
                <path
                  d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm1-6.41V4c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .28.11.53.29.71l2 2a1.003 1.003 0 001.42-1.42L9 7.59z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            PENDING APPROVAL
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main activeBuildCard"
      >
        <span
          class="bp3-icon StyledProps--main buildIcon"
          data-icon="ci-active-build"
        >
          <svg
            fill="none"
            height="16"
            viewBox="0 0 24 20"
            width="16"
          >
            <path
              d="M18.931 0l-5.068 2.926v2.057l-1.778-1.026-5.067 2.926v2.156l-1.95-1.126L0 10.84v5.852l5.068 2.926 5.068-2.926v-2.156l1.95 1.126 5.068-2.927V10.68l1.777 1.026L24 8.78V2.926L18.931 0zm3.75 3.18l-3.749 2.165-3.75-2.165 3.75-2.165 3.75 2.165zm-8.818 2.818v2.277l-1.777 1.026-3.75-2.164 3.75-2.165 1.777 1.026zm2.412 3.158l-1.09-.63 1.09-.628v1.258zm-1.533-1.388V6.506l1.093.63-1.093.632zm-7.724 2.286v2.079l-1.95 1.125-3.75-2.165 3.75-2.165 1.95 1.126zm2.24 2.96l-1.004-.58 1.003-.58v1.16zm-1.361-1.389v-1.064l.921.532-.921.532zm-7.018.23l3.75 2.165v4.329l-3.75-2.165v-4.33zm8.378 4.329l-3.75 2.165v-4.33l1.868-1.078 1.882 1.087v2.156zm-1.36-6.637v-1.65l3.75 2.165v4.33l-1.51-.872v-2.68l-2.24-1.293zm8.378 2.68l-3.75 2.165v-4.33l1.781-1.028 1.969 1.137v2.056zm-1.533-6.736V3.94l3.75 2.165v4.33l-1.338-.773v-2.78L14.742 5.49zm4.629 4.945v-4.33l3.75-2.165v4.33l-3.75 2.165z"
              fill="#6B6D85"
            />
          </svg>
        </span>
        <div
          class="StyledProps--font StyledProps--main titleAndMessage"
        >
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main title StyledProps--font-weight-bold StyledProps--color StyledProps--color-black"
            style="--text-line-clamp: 1;"
          >
            Pipeline1
          </p>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-size-small StyledProps--color StyledProps--color-black"
            style="--text-line-clamp: 1;"
          >
            This is message
          </p>
        </div>
        <div
          class="StyledProps--font StyledProps--main"
        >
          <div
            class="statusLabel pendingApprovalLabel"
          >
            <span
              class="bp3-icon bp3-icon-time StyledProps--main statusLabelIcon"
              icon="time"
            >
              <svg
                data-icon="time"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  time
                </desc>
                <path
                  d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm1-6.41V4c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .28.11.53.29.71l2 2a1.003 1.003 0 001.42-1.42L9 7.59z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            PENDING APPROVAL
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main activeBuildCard"
      >
        <span
          class="bp3-icon StyledProps--main buildIcon"
          data-icon="ci-active-build"
        >
          <svg
            fill="none"
            height="16"
            viewBox="0 0 24 20"
            width="16"
          >
            <path
              d="M18.931 0l-5.068 2.926v2.057l-1.778-1.026-5.067 2.926v2.156l-1.95-1.126L0 10.84v5.852l5.068 2.926 5.068-2.926v-2.156l1.95 1.126 5.068-2.927V10.68l1.777 1.026L24 8.78V2.926L18.931 0zm3.75 3.18l-3.749 2.165-3.75-2.165 3.75-2.165 3.75 2.165zm-8.818 2.818v2.277l-1.777 1.026-3.75-2.164 3.75-2.165 1.777 1.026zm2.412 3.158l-1.09-.63 1.09-.628v1.258zm-1.533-1.388V6.506l1.093.63-1.093.632zm-7.724 2.286v2.079l-1.95 1.125-3.75-2.165 3.75-2.165 1.95 1.126zm2.24 2.96l-1.004-.58 1.003-.58v1.16zm-1.361-1.389v-1.064l.921.532-.921.532zm-7.018.23l3.75 2.165v4.329l-3.75-2.165v-4.33zm8.378 4.329l-3.75 2.165v-4.33l1.868-1.078 1.882 1.087v2.156zm-1.36-6.637v-1.65l3.75 2.165v4.33l-1.51-.872v-2.68l-2.24-1.293zm8.378 2.68l-3.75 2.165v-4.33l1.781-1.028 1.969 1.137v2.056zm-1.533-6.736V3.94l3.75 2.165v4.33l-1.338-.773v-2.78L14.742 5.49zm4.629 4.945v-4.33l3.75-2.165v4.33l-3.75 2.165z"
              fill="#6B6D85"
            />
          </svg>
        </span>
        <div
          class="StyledProps--font StyledProps--main titleAndMessage"
        >
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main title StyledProps--font-weight-bold StyledProps--color StyledProps--color-black"
            style="--text-line-clamp: 1;"
          >
            Pipeline1
          </p>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-size-small StyledProps--color StyledProps--color-black"
            style="--text-line-clamp: 1;"
          >
            This is message
          </p>
        </div>
        <div
          class="StyledProps--font StyledProps--main"
        >
          <div
            class="statusLabel pendingApprovalLabel"
          >
            <span
              class="bp3-icon bp3-icon-time StyledProps--main statusLabelIcon"
              icon="time"
            >
              <svg
                data-icon="time"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  time
                </desc>
                <path
                  d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm1-6.41V4c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .28.11.53.29.71l2 2a1.003 1.003 0 001.42-1.42L9 7.59z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            PENDING APPROVAL
          </div>
        </div>
      </div>
    </div>
    <a
      class="bp3-button StyledProps--font Button--button Button--with-current-color Button--link StyledProps--main showMoreLink"
      href="javascript:void()"
      role="button"
      tabindex="0"
    >
      <span
        class="bp3-button-text"
      >
        See All
      </span>
    </a>
  </div>
</div>
`;

exports[`CardRailView renders correctly when content is empty 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main main"
  >
    <div
      class="StyledProps--font StyledProps--main header"
    >
      <span
        class="bp3-icon bp3-icon-database StyledProps--main"
        icon="database"
        style="width: 14px;"
      >
        <svg
          data-icon="database"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            database
          </desc>
          <path
            d="M8 4c3.31 0 6-.9 6-2s-2.69-2-6-2C4.68 0 2 .9 2 2s2.68 2 6 2zm-6-.48V8c0 1.1 2.69 2 6 2s6-.9 6-2V3.52C12.78 4.4 10.56 5 8 5s-4.78-.6-6-1.48zm0 6V14c0 1.1 2.69 2 6 2s6-.9 6-2V9.52C12.78 10.4 10.56 11 8 11s-4.78-.6-6-1.48z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <p
        class="StyledProps--font StyledProps--main title StyledProps--font-size-medium"
      >
        Repositories
      </p>
    </div>
    <div
      class="StyledProps--font StyledProps--main content contentEmpty"
    >
      <div
        class="StyledProps--font StyledProps--main emptyView"
      >
        <div
          class="StyledProps--font StyledProps--main emptyViewItem"
        />
        <div
          class="StyledProps--font StyledProps--main emptyViewItem"
        />
        <div
          class="StyledProps--font StyledProps--main emptyViewCard"
        >
          <img
            src="test-file-stub"
          />
          <p
            class="StyledProps--font StyledProps--main"
          >
            No Repositories found
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CardRailView renders correctly while loading="true" 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main main"
  >
    <div
      class="StyledProps--font StyledProps--main header"
    >
      <span
        class="bp3-icon bp3-icon-warning-sign StyledProps--main"
        icon="warning-sign"
        style="width: 14px;"
      >
        <svg
          data-icon="warning-sign"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            warning-sign
          </desc>
          <path
            d="M15.84 13.5l.01-.01-7-12-.01.01c-.17-.3-.48-.5-.85-.5s-.67.2-.85.5l-.01-.01-7 12 .01.01c-.09.15-.15.31-.15.5 0 .55.45 1 1 1h14c.55 0 1-.45 1-1 0-.19-.06-.35-.15-.5zm-6.85-.51h-2v-2h2v2zm0-3h-2v-5h2v5z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <p
        class="StyledProps--font StyledProps--main title StyledProps--font-size-medium"
      >
        Active Builds
      </p>
    </div>
    <div
      class="StyledProps--font StyledProps--main content"
    >
      <div
        class="StyledProps--font StyledProps--main bp3-skeleton"
        style="height: 60px;"
      />
      <div
        class="StyledProps--font StyledProps--main bp3-skeleton"
        style="height: 60px;"
      />
      <div
        class="StyledProps--font StyledProps--main bp3-skeleton"
        style="height: 60px;"
      />
    </div>
  </div>
</div>
`;
